# safewrite

./: .gitignore  AUTHORS  ChangeLog  MANIFEST  Makefile  Makefile.am  README  TODO  configure  configure.ac  configure.in  safewrite.1  safewrite.c  system.h  take.1  take.c  test_cleanup  test_dash_m1  test_dash_m2  test_dash_s1  test_dash_s2  test_newfail  test_newfile  test_refail  test_replace
contrib/redhat-rpm/: safewrite.spec
